refactor: 调整配置文件相关改动
